...
    <item
        android:id="@+id/navigation_my_customers"
        android:icon="@drawable/outline_groups_24"
        android:title="@string/my_customers" />

    <item
        android:id="@+id/navigation_account_details"
        android:icon="@drawable/outline_account_circle_24"
        android:title="@string/account_details" />

</menu>
